{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 44,
  "lineage": "405b7de5-c57b-1c31-1142-7c698a406acb",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:loadbalancer/app/domain-checker-prod-alb/4ee472ceb090d4c5",
            "arn_suffix": "app/domain-checker-prod-alb/4ee472ceb090d4c5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "domain-checker-prod-alb-1264724004.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:831959027212:loadbalancer/app/domain-checker-prod-alb/4ee472ceb090d4c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "domain-checker-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-084e70af70cccc22d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07033fdb1cf8aed38"
              },
              {
                "subnet_id": "subnet-09a9f9a96597cd8a7"
              }
            ],
            "subnets": [
              "subnet-07033fdb1cf8aed38",
              "subnet-09a9f9a96597cd8a7"
            ],
            "tags": {
              "Name": "domain-checker-prod-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-alb",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "vpc_id": "vpc-0c83eb44b324ff787",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:listener/app/domain-checker-prod-alb/4ee472ceb090d4c5/2ce7fb9adf4e5fdf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:targetgroup/domain-checker-prod-frontend-tg/152769dc46dfd0c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831959027212:listener/app/domain-checker-prod-alb/4ee472ceb090d4c5/2ce7fb9adf4e5fdf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:loadbalancer/app/domain-checker-prod-alb/4ee472ceb090d4c5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.frontend",
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:targetgroup/domain-checker-prod-backend-tg/dfd124289111ae25",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:listener-rule/app/domain-checker-prod-alb/4ee472ceb090d4c5/2ce7fb9adf4e5fdf/dd624b5b8e938f9e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831959027212:listener-rule/app/domain-checker-prod-alb/4ee472ceb090d4c5/2ce7fb9adf4e5fdf/dd624b5b8e938f9e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:listener/app/domain-checker-prod-alb/4ee472ceb090d4c5/2ce7fb9adf4e5fdf",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "platform-team",
              "Project": "domain-checker"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.main",
            "module.ecs.aws_lb_target_group.backend",
            "module.ecs.aws_lb_target_group.frontend",
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:targetgroup/domain-checker-prod-backend-tg/dfd124289111ae25",
            "arn_suffix": "targetgroup/domain-checker-prod-backend-tg/dfd124289111ae25",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831959027212:targetgroup/domain-checker-prod-backend-tg/dfd124289111ae25",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:831959027212:loadbalancer/app/domain-checker-prod-alb/4ee472ceb090d4c5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "domain-checker-prod-backend-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "domain-checker-prod-backend-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-backend-tg",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831959027212:targetgroup/domain-checker-prod-frontend-tg/152769dc46dfd0c5",
            "arn_suffix": "targetgroup/domain-checker-prod-frontend-tg/152769dc46dfd0c5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831959027212:targetgroup/domain-checker-prod-frontend-tg/152769dc46dfd0c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:831959027212:loadbalancer/app/domain-checker-prod-alb/4ee472ceb090d4c5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "domain-checker-prod-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "domain-checker-prod-frontend-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-frontend-tg",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:security-group/sg-084e70af70cccc22d",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084e70af70cccc22d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "domain-checker-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "831959027212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "domain-checker-prod-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-alb-sg",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:security-group/sg-0414fe30c60f328f9",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0414fe30c60f328f9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach backend",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084e70af70cccc22d"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084e70af70cccc22d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "domain-checker-prod-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "831959027212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "domain-checker-prod-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-ecs-tasks-sg",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf72ce13ad1cc9a0",
            "arn": "arn:aws:ec2:us-east-1:831959027212:elastic-ip/eipalloc-0bf72ce13ad1cc9a0",
            "association_id": "eipassoc-068b61c43dec3d9ec",
            "domain": "vpc",
            "id": "eipalloc-0bf72ce13ad1cc9a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d44d11942be3dbad",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-13-216-161-191.compute-1.amazonaws.com",
            "public_ip": "13.216.161.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "domain-checker-prod-nat-eip-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-nat-eip-1",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f04451189ab379f",
            "arn": "arn:aws:ec2:us-east-1:831959027212:elastic-ip/eipalloc-04f04451189ab379f",
            "association_id": "eipassoc-09fda2ede1fd6ebc1",
            "domain": "vpc",
            "id": "eipalloc-04f04451189ab379f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07d7750e29e6df475",
            "private_dns": "ip-10-0-2-193.ec2.internal",
            "private_ip": "10.0.2.193",
            "public_dns": "ec2-52-1-191-66.compute-1.amazonaws.com",
            "public_ip": "52.1.191.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "domain-checker-prod-nat-eip-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-nat-eip-2",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:internet-gateway/igw-07ec4188c2b657089",
            "id": "igw-07ec4188c2b657089",
            "owner_id": "831959027212",
            "tags": {
              "Name": "domain-checker-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-igw",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf72ce13ad1cc9a0",
            "association_id": "eipassoc-068b61c43dec3d9ec",
            "connectivity_type": "public",
            "id": "nat-0f00b80904a476282",
            "network_interface_id": "eni-0d44d11942be3dbad",
            "private_ip": "10.0.1.232",
            "public_ip": "13.216.161.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a9f9a96597cd8a7",
            "tags": {
              "Name": "domain-checker-prod-nat-gw-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-nat-gw-1",
              "Owner": "platform-team",
              "Project": "domain-checker"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f04451189ab379f",
            "association_id": "eipassoc-09fda2ede1fd6ebc1",
            "connectivity_type": "public",
            "id": "nat-034f7a08195e0abf3",
            "network_interface_id": "eni-07d7750e29e6df475",
            "private_ip": "10.0.2.193",
            "public_ip": "52.1.191.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07033fdb1cf8aed38",
            "tags": {
              "Name": "domain-checker-prod-nat-gw-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-nat-gw-2",
              "Owner": "platform-team",
              "Project": "domain-checker"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:route-table/rtb-02774681329c53f6d",
            "id": "rtb-02774681329c53f6d",
            "owner_id": "831959027212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f00b80904a476282",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "domain-checker-prod-private-rt-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-private-rt-1",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:route-table/rtb-03ddf0400ab88357a",
            "id": "rtb-03ddf0400ab88357a",
            "owner_id": "831959027212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034f7a08195e0abf3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "domain-checker-prod-private-rt-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-private-rt-2",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:route-table/rtb-02683eb768fd520b9",
            "id": "rtb-02683eb768fd520b9",
            "owner_id": "831959027212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ec4188c2b657089",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "domain-checker-prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-public-rt",
              "Owner": "platform-team",
              "Project": "domain-checker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033f509122d114159",
            "route_table_id": "rtb-02774681329c53f6d",
            "subnet_id": "subnet-0a19fbf27cecac733"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccbb3fbddf7d00e9",
            "route_table_id": "rtb-03ddf0400ab88357a",
            "subnet_id": "subnet-02cb2fac0b06cd416"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b497fccd06bd46b",
            "route_table_id": "rtb-02683eb768fd520b9",
            "subnet_id": "subnet-09a9f9a96597cd8a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf2930a76264f1be",
            "route_table_id": "rtb-02683eb768fd520b9",
            "subnet_id": "subnet-07033fdb1cf8aed38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:subnet/subnet-0a19fbf27cecac733",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a19fbf27cecac733",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831959027212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "domain-checker-prod-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-private-subnet-1",
              "Owner": "platform-team",
              "Project": "domain-checker",
              "Type": "private"
            },
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:subnet/subnet-02cb2fac0b06cd416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cb2fac0b06cd416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831959027212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "domain-checker-prod-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-private-subnet-2",
              "Owner": "platform-team",
              "Project": "domain-checker",
              "Type": "private"
            },
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:subnet/subnet-09a9f9a96597cd8a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a9f9a96597cd8a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831959027212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "domain-checker-prod-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-public-subnet-1",
              "Owner": "platform-team",
              "Project": "domain-checker",
              "Type": "public"
            },
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:subnet/subnet-07033fdb1cf8aed38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07033fdb1cf8aed38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831959027212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "domain-checker-prod-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-public-subnet-2",
              "Owner": "platform-team",
              "Project": "domain-checker",
              "Type": "public"
            },
            "vpc_id": "vpc-0c83eb44b324ff787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831959027212:vpc/vpc-0c83eb44b324ff787",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a1db5dd9832a568",
            "default_route_table_id": "rtb-0016428a1aaa3cec2",
            "default_security_group_id": "sg-00f6c05900288b633",
            "dhcp_options_id": "dopt-00bae77070e0813b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c83eb44b324ff787",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0016428a1aaa3cec2",
            "owner_id": "831959027212",
            "tags": {
              "Name": "domain-checker-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "domain-checker-prod-vpc",
              "Owner": "platform-team",
              "Project": "domain-checker"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}